--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                  </li>
 
                    <li class="nav-item">
-                    <a class="nav-link" href="/index#principle-message">Principle messege</a>
+                    <a class="nav-link" href="/index.html#principle-message">Principle messege</a>
                  </li><li class="nav-item">
                   <a class="nav-link" href="/faculty">Faculty</a>
                </li><li class="nav-item">
