--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -88,11 +88,11 @@
                    <li class="nav-item">
                     <a class="nav-link" href="/index.html#principle-message">Principle messege</a>
                  </li><li class="nav-item">
-                  <a class="nav-link" href="/faculty">Faculty</a>
+                  <a class="nav-link" href="/faculty.html">Faculty</a>
                </li><li class="nav-item">
-                <a class="nav-link" href="/photo-gallery">Photo-Gallery</a>
+                <a class="nav-link" href="/photo-gallery.html">Photo-Gallery</a>
              </li><li class="nav-item">
-              <a class="nav-link" href="/video-gallery">Video-Gallery</a>
+              <a class="nav-link" href="/video-gallery.html">Video-Gallery</a>
            </li>
                   </ul>
                 </li>
@@ -136,10 +136,10 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/msc">MSC</a>
+                  <a class="nav-link" href="/msc.html">MSC</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/contact">Contact Us</a>
+                  <a class="nav-link" href="/contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
