add path in footer

--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -86,13 +86,13 @@
                  </li>
 
                    <li class="nav-item">
-                    <a class="nav-link" href="/index.html#principle-message">Principle messege</a>
+                    <a class="nav-link" href="./index.html#principle-message">Principle messege</a>
                  </li><li class="nav-item">
-                  <a class="nav-link" href="/faculty.html">Faculty</a>
+                  <a class="nav-link" href="./faculty.html">Faculty</a>
                </li><li class="nav-item">
-                <a class="nav-link" href="/photo-gallery.html">Photo-Gallery</a>
+                <a class="nav-link" href="./photo-gallery.html">Photo-Gallery</a>
              </li><li class="nav-item">
-              <a class="nav-link" href="/video-gallery.html">Video-Gallery</a>
+              <a class="nav-link" href="./video-gallery.html">Video-Gallery</a>
            </li>
                   </ul>
                 </li>
@@ -109,37 +109,37 @@
                   <ul class="dropdown-menu">
 
                     <li class="nav-item">
-                      <a class="nav-link" href="/index">HOME</a>
+                      <a class="nav-link" href="./index">HOME</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/wings#IFIC">IFIC</a>
+                      <a class="nav-link" href="./wings#IFIC">IFIC</a>
                     </li>      
                                  
                     <li class="nav-item">
-                      <a class="nav-link" href="/wings#PSTE">PSTE</a>
+                      <a class="nav-link" href="./wings#PSTE">PSTE</a>
                     </li>       
                     <li class="nav-item">
-                      <a class="nav-link" href="/wings#DRU">DRU</a>
+                      <a class="nav-link" href="./wings#DRU">DRU</a>
                     </li>               
                     <li class="nav-item">
-                      <a class="nav-link" href="/wings#ET">ET</a>
+                      <a class="nav-link" href="./wings#ET">ET</a>
                     </li>                   
                     <li class="nav-item">
-                      <a class="nav-link" href="/wings#CMDE">CMDE</a>
+                      <a class="nav-link" href="./wings#CMDE">CMDE</a>
                    </li>
                    <li class="nav-item">
-                    <a class="nav-link" href="/wings#WE">WE</a>
+                    <a class="nav-link" href="./wings#WE">WE</a>
                    </li>
                    <li class="nav-item">
-                   <a class="nav-link" href="/wings#PM">P & M</a>
+                   <a class="nav-link" href="./wings#PM">P & M</a>
                   </li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/msc.html">MSC</a>
+                  <a class="nav-link" href="./msc.html">MSC</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/contact.html">Contact Us</a>
+                  <a class="nav-link" href="./contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
@@ -185,34 +185,34 @@
             <h3 class="footer-heading"><span>DIET</span></h3>
             <ul class="list-unstyled">
               <li><a href="/">HOME</a></li>
-              <li><a href="index#aboutus">ABOUT US</a></li>
-              <li><a href="wings">WINGS</a></li>
-              <li><a href="order">ORDERS/CIRCULARS</a></li>
-              <li><a href="msc">MSE</a></li>
-              <li><a href="photo-gallery">PHOTO GALLERY</a></li>
-              <li><a href="video-gallery">VIDEO GALLERY</a></li>
-              <li><a href="contact">CONTACT US</a></li>
+              <li><a href="./index#aboutus.html">ABOUT US</a></li>
+              <li><a href="./wings.html">WINGS</a></li>
+              <li><a href="order.html">ORDERS/CIRCULARS</a></li>
+              <li><a href="./msc.html">MSE</a></li>
+              <li><a href="./photo-gallery.html">PHOTO GALLERY</a></li>
+              <li><a href="./video-gallery.html">VIDEO GALLERY</a></li>
+              <li><a href="./contact.html">CONTACT US</a></li>
             </ul>
           </div>
           <div class="col-lg-3">
             <h3 class="footer-heading"><span>WINGS</span></h3>
             <ul class="list-unstyled">
-              <li><a href="wings#IFIC">IFIC</a></li>
-              <li><a href="wings#PSTE">PSTE</a></li>
-              <li><a href="wings#DRU">DRU</a></li>
-              <li><a href="wings#ET">ET</a></li>
-              <li><a href="wings#CMDE">CMDE</a></li>
-              <li><a href="wings#WE">WE</a></li>
-              <li><a href="wings#PM">P & M</a></li>
+              <li><a href="./wings#IFIC.html">IFIC</a></li>
+              <li><a href="./wings#PSTE.html">PSTE</a></li>
+              <li><a href="./wings#DRU.html">DRU</a></li>
+              <li><a href="./wings#ET.html">ET</a></li>
+              <li><a href="./wings#CMDE.html">CMDE</a></li>
+              <li><a href="./wings#WE.html">WE</a></li>
+              <li><a href="./wings#PM.html">P & M</a></li>
             </ul>
           </div>
           <div class="col-lg-3">
             <h3 class="footer-heading"><span>IMPORTANT LINKS</span></h3>
             <ul class="list-unstyled">
-              <li><a href="wings">WINGS</a></li>
-              <li><a href="order">ORDERS/CIRCULARS</a></li>
-              <li><a href="msc">MSE</a></li>
-              <li><a href="contact">CONTACT US</a></li>
+              <li><a href="./wings.html">WINGS</a></li>
+              <li><a href="./order.html">ORDERS/CIRCULARS</a></li>
+              <li><a href="./msc.html">MSE</a></li>
+              <li><a href="./contact.html">CONTACT US</a></li>
             </ul>
           </div>
           <div class="col-lg-3">
@@ -233,7 +233,6 @@
         </div>
       </div>
     </div>
-
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
